--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,4 +25,4 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run Pytest
-        run: pytest -v --maxfail=1 --disable-warnings
+        run: PYTHONPATH=. pytest -v --maxfail=1 --disable-warnings
