--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: Run Pytest
+name: CI Pipeline
 
 on:
   push:
@@ -24,5 +24,20 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run Pytest
+      - name: Run Pytest (local env)
         run: PYTHONPATH=. pytest -v --maxfail=1 --disable-warnings
+
+  docker-build-test:
+    runs-on: ubuntu-latest
+    needs: test   # only run if unit tests pass
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Build Docker image
+        run: docker build -t aceest-fitness .
+
+      - name: Run tests inside Docker
+        run: docker run --rm aceest-fitness pytest -v --maxfail=1 --disable-warnings
+
